// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreditCardNumber component should renders correctly when cardType is present 1`] = `
<Styled(BodyCopy)
  className={null}
  color="text.primary"
  component="div"
  fontFamily="primary"
  fontSize={12}
  fontWeight="regular"
  letterSpacing="normal"
  lineHeight="normal"
  textAlign="left"
>
  <Styled(TextBox)
    maxLength="16"
  />
  <Styled(Image)
    src="/static/images/visa-small.png"
  />
</Styled(BodyCopy)>
`;

exports[`CreditCardNumber component should renders correctly when isExpirationRequired is false 1`] = `
<Styled(BodyCopy)
  className={null}
  color="text.primary"
  component="div"
  fontFamily="primary"
  fontSize={12}
  fontWeight="regular"
  letterSpacing="normal"
  lineHeight="normal"
  textAlign="left"
>
  <Styled(TextBox)
    maxLength="16"
  />
</Styled(BodyCopy)>
`;
